[package]
name = "s9_websocket"
description = "A simple client library for blocking and non-blocking WebSockets."
categories = ["web-programming::websocket", "network-programming"]
keywords = ["websocket", "io", "web", "non-blocking"]
version = "0.0.2"
authors = ["Alexander Silvennoinen <alex@silvennoinen.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/s9_websocket/latest/s9_websocket"
homepage = "https://github.com/AlexSilver9/s9_websocket"
repository = "https://github.com/AlexSilver9/s9_websocket"
edition = "2021"
rust-version = "1.80.1"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[dependencies]
tungstenite = { version = "0.27", features = ["native-tls"] }
crossbeam-channel = "0.5"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"

[lib]
name = "s9_websocket"
path = "src/lib.rs"
